tambah bootstrap init untuk Defendency Injection
