# internal/dto/response/post_response.go
@@ -1,0 +1,10 @@
+package response
+
+type PostResponse struct {
+	ID        uint   `json:"id"`
+	Title     string `json:"title"`
+	Content   string `json:"content"`
+	UserID    uint   `json:"user_id"`
+	CreatedAt string `json:"created_at"`
+	UpdatedAt string `json:"updated_at"`
+}
